Fix the tiny white space between the navbar and banner

--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,7 @@ nav.navbar {
 	position: relative;
 	width: 100%;
 	text-transform: uppercase;
+	margin-bottom: -6px;
 
 }
 .navbar a:-webkit-any-link {
